--- a/src/routes/landing/landing.styles.scss
+++ b/src/routes/landing/landing.styles.scss
@@ -2,7 +2,7 @@
 @import "../../assets/scss/mixins";
 
 .landing-container {
-  height: 100vh;
+  height: calc(100vh - 6vh - 80px);
   text-align: center;
 
   h1,
